--- a/firestore-stripe-subscriptions/extension.yaml
+++ b/firestore-stripe-subscriptions/extension.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: firestore-stripe-subscriptions
-version: 0.1.1
+version: 0.1.2
 specVersion: v1beta
 
 displayName: Run Subscription Payments with Stripe
@@ -84,6 +84,28 @@ resources:
       location: ${LOCATION}
       runtime: nodejs10
       httpsTrigger: {}
+
+  - name: onUserDeleted
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Deletes the Stripe customer object and cancels all their subscriptions when the user is deleted in Firebase Authentication.
+    properties:
+      location: ${LOCATION}
+      runtime: nodejs10
+      eventTrigger:
+        eventType: providers/firebase.auth/eventTypes/user.delete
+        resource: projects/${PROJECT_ID}
+
+  - name: onCustomerDataDeleted
+    type: firebaseextensions.v1beta.function
+    description: >-
+      Deletes the Stripe customer object and cancels all their subscriptions when the customer doc in Cloud Firestore is deleted.
+    properties:
+      location: ${LOCATION}
+      runtime: nodejs10
+      eventTrigger:
+        eventType: providers/cloud.firestore/eventTypes/document.delete
+        resource: projects/${PROJECT_ID}/databases/(default)/documents/${CUSTOMERS_COLLECTION}/{uid}
 
 params:
   - param: LOCATION
