--- a/firestore-stripe-invoices/extension.yaml
+++ b/firestore-stripe-invoices/extension.yaml
@@ -107,6 +107,8 @@ params:
     description: >-
       What is the path to the Cloud Firestore collection where you'll store your invoices?
     default: invoices
+    validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
+    validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "path/to/collection".
     required: true
 
   - param: STRIPE_API_KEY
