--- a/firestore-stripe-subscriptions/extension.yaml
+++ b/firestore-stripe-subscriptions/extension.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: firestore-stripe-subscriptions
-version: 0.1.6
+version: 0.1.7
 specVersion: v1beta
 
 displayName: Run Subscription Payments with Stripe
@@ -172,9 +172,26 @@ params:
     label: Customer details and subscriptions collection
     description: >-
       What is the path to the Cloud Firestore collection where the extension should store Stripe customer details?
+      This can be the location of an existing user collection, the extension will not overwrite your existing data but rather merge the Stripe data into your existing `uid` docs.
     default: customers
     validationRegex: "^[^/]+(/[^/]+/[^/]+)*$"
     validationErrorMessage: Firestore collection paths must be an odd number of segments separated by slashes, e.g. "path/to/collection".
+    required: true
+
+  - param: SYNC_USERS_ON_CREATE
+    label: Sync new users to Stripe customers and Cloud Firestore
+    description: >-
+      Do you want to automatically sync new users to customer objects in Stripe?
+      If set to YES, the extension will create a new customer object in Stripe
+      and add a new doc to the customer collection in Firestore when a new user signs up via Firebase Authentication.
+      If set to NO (default), the extension will create the customer object "on the fly" with the first checkout session creation.
+    type: select
+    options:
+      - label: 'Do not sync'
+        value: 'Do not sync'
+      - label: 'Sync'
+        value: 'Sync'
+    default: 'Do not sync'
     required: true
 
   - param: STRIPE_API_KEY
