--- a/firestore-stripe-subscriptions/extension.yaml
+++ b/firestore-stripe-subscriptions/extension.yaml
@@ -182,9 +182,9 @@ params:
     label: Sync new users to Stripe customers and Cloud Firestore
     description: >-
       Do you want to automatically sync new users to customer objects in Stripe?
-      If set to YES, the extension will create a new customer object in Stripe
+      If set to 'Sync', the extension will create a new customer object in Stripe
       and add a new doc to the customer collection in Firestore when a new user signs up via Firebase Authentication.
-      If set to NO (default), the extension will create the customer object "on the fly" with the first checkout session creation.
+      If set to 'Do not sync' (default), the extension will create the customer object "on the fly" with the first checkout session creation.
     type: select
     options:
       - label: 'Do not sync'
