chore(subs): February updates (#135)
* chore(subs/docs): Add docs for dynamic tax rates.

* feat(subs): Add locale override for checkout sessions.

* feat(subs): Set promotion codes programmatically. Closes #107

* feat(subs): Optionally sync invoices to Cloud Firestore. Closes #124

--- a/firestore-stripe-subscriptions/functions/package.json
+++ b/firestore-stripe-subscriptions/functions/package.json
@@ -13,12 +13,12 @@
   "dependencies": {
     "firebase-admin": "^8.9.2",
     "firebase-functions": "^3.9.0",
-    "stripe": "8.83.0"
+    "stripe": "^8.135.0"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
     "firebase-functions-test": "^0.1.6",
-    "@types/express": "^4.0.37",
-    "typescript": "^3.4.0"
+    "typescript": "^3.9.9"
   },
   "prettier": {
     "singleQuote": true,
