--- a/firestore-stripe-payments/extension.yaml
+++ b/firestore-stripe-payments/extension.yaml
@@ -16,7 +16,7 @@ name: firestore-stripe-payments
 version: 0.2.0
 specVersion: v1beta
 
-displayName: Run Subscription Payments with Stripe
+displayName: Web & Mobile Payments with Stripe
 description: Controls access to paid content by syncing your subscriptions with Firebase Authentication.
 
 license: Apache-2.0
