--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
+api-extractor.json
 package.json
 extension.yaml
 package-lock.json
@@ -6,6 +7,7 @@ package-lock.json
 
 # generated files
 README.md
+**/etc/**
 **/functions/lib/**
 **/lib/**
 **/dist/**
