--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -20,9 +20,13 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.18.7",
     "@types/chai": "^4.2.21",
+    "@types/chai-as-promised": "^7.1.4",
     "@types/mocha": "^9.0.0",
+    "@types/sinon": "^10.0.2",
     "chai": "^4.3.4",
+    "chai-as-promised": "^7.1.1",
     "mocha": "^9.1.1",
+    "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
