--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -5,10 +5,11 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
-    "api-extractor:local": "npm run build && api-extractor run --local --verbose",
     "api-extractor": "api-extractor run --verbose",
+    "api-extractor:local": "npm run build && api-extractor run --local --verbose",
     "build": "tsc",
-    "test": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts"
+    "test": "firebase emulators:exec --only firestore 'npm run test:unit'",
+    "test:unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts"
   },
   "keywords": [
     "firebase",
@@ -25,6 +26,7 @@
     "@types/sinon": "^10.0.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "firebase-tools": "^9.18.0",
     "mocha": "^9.1.1",
     "sinon": "^11.1.2",
     "ts-node": "^10.2.1",
