--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -22,10 +22,12 @@
     "@microsoft/api-extractor": "^7.18.7",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
+    "@types/chai-like": "^1.1.1",
     "@types/mocha": "^9.0.0",
     "@types/sinon": "^10.0.2",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
+    "chai-like": "^1.1.1",
     "firebase-tools": "^9.18.0",
     "mocha": "^9.1.1",
     "sinon": "^11.1.2",
