--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -25,12 +25,14 @@
     "@types/chai-like": "^1.1.1",
     "@types/mocha": "^9.0.0",
     "@types/sinon": "^10.0.2",
+    "@types/sinon-chai": "^3.2.5",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
     "chai-like": "^1.1.1",
     "firebase-tools": "^9.18.0",
     "mocha": "^9.1.1",
     "sinon": "^11.1.2",
+    "sinon-chai": "^3.7.0",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.2"
   },
