--- a/firestore-stripe-subscriptions/extension.yaml
+++ b/firestore-stripe-subscriptions/extension.yaml
@@ -196,6 +196,7 @@ params:
 
   - param: STRIPE_API_KEY
     label: Stripe API key with restricted access
+    type: secret
     description: >-
       What is your Stripe API key? 
       We recommend creating a new [restricted key](https://stripe.com/docs/keys#limit-access)
@@ -206,6 +207,7 @@ params:
 
   - param: STRIPE_WEBHOOK_SECRET
     label: Stripe webhook secret
+    type: secret
     description: >-
       This is your signing secret for a Stripe-registered webhook. 
       This webhook can only be registered after installation.
