--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -8,8 +8,8 @@
     "api-extractor": "api-extractor run --verbose",
     "api-extractor:local": "npm run build && api-extractor run --local --verbose",
     "build": "tsc",
-    "test": "firebase emulators:exec --only firestore 'npm run test:unit'",
-    "test:unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha -r ts-node/register test/**/*.spec.ts"
+    "test": "firebase emulators:exec --only firestore,auth --project fake-project-id 'npm run test:unit'",
+    "test:unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha test/**/*.spec.ts"
   },
   "keywords": [
     "firebase",
@@ -30,6 +30,8 @@
     "chai-as-promised": "^7.1.1",
     "chai-like": "^1.1.1",
     "firebase-tools": "^9.18.0",
+    "jsdom": "^17.0.0",
+    "jsdom-global": "^3.0.2",
     "mocha": "^9.1.1",
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
