--- a/firestore-stripe-web-sdk/tsconfig.json
+++ b/firestore-stripe-web-sdk/tsconfig.json
@@ -5,6 +5,7 @@
     "strict": true,
     "preserveConstEnums": true,
     "sourceMap": true,
+    "inlineSources": true,
     "declaration": true,
     "declarationMap": true,
     "target": "ES6",
