--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -8,6 +8,7 @@
     "api-extractor": "api-extractor run --verbose",
     "api-extractor:local": "npm run build && api-extractor run --local --verbose",
     "build": "tsc",
+    "postbuild": "node ./postbuild.js",
     "test": "firebase emulators:exec --only firestore,auth --project fake-project-id 'npm run test:unit'",
     "test:unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha test/**/*.spec.ts"
   },
@@ -43,6 +44,7 @@
     "jsdom": "^17.0.0",
     "jsdom-global": "^3.0.2",
     "mocha": "^9.1.1",
+    "replace-in-file": "^6.2.0",
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.2.1",
