--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -5,6 +5,7 @@
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
   "scripts": {
+    "api-documenter": "api-documenter markdown --input-folder temp --output-folder markdown",
     "api-extractor": "api-extractor run --verbose",
     "api-extractor:local": "npm run build && api-extractor run --local --verbose",
     "build": "tsc",
@@ -30,6 +31,7 @@
     "README.md"
   ],
   "devDependencies": {
+    "@microsoft/api-documenter": "^7.13.63",
     "@microsoft/api-extractor": "^7.18.7",
     "@types/chai": "^4.2.21",
     "@types/chai-as-promised": "^7.1.4",
