--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "firestore-stripe-payments-js",
+  "name": "@stripe/firestore-stripe-payments",
   "version": "0.0.1",
   "description": "Client SDK for the firestore-stripe-payments Firebase Extension",
   "main": "./lib/index.js",
