--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -11,7 +11,7 @@
     "build": "tsc",
     "postbuild": "node ./postbuild.js",
     "test": "firebase emulators:exec --only firestore,auth --project fake-project-id 'npm run test:unit'",
-    "test:unit": "TS_NODE_COMPILER_OPTIONS='{\"module\":\"commonjs\"}' mocha test/**/*.spec.ts"
+    "test:unit": "karma start --single-run"
   },
   "keywords": [
     "firebase",
@@ -43,13 +43,20 @@
     "chai-as-promised": "^7.1.1",
     "chai-like": "^1.1.1",
     "firebase-tools": "^9.18.0",
-    "jsdom": "^17.0.0",
-    "jsdom-global": "^3.0.2",
     "mocha": "^9.1.1",
+    "karma": "^6.3.4",
+    "karma-mocha": "^2.0.1",
+    "karma-mocha-reporter": "^2.2.5",
+    "karma-webpack": "^4.0.2",
+    "karma-sourcemap-loader": "^0.3.8",
+    "karma-chrome-launcher": "^3.1.0",
+    "webpack": "^4.46.0",
+    "source-map-loader": "^1.1.3",
     "replace-in-file": "^6.2.0",
     "sinon": "^11.1.2",
     "sinon-chai": "^3.7.0",
     "ts-node": "^10.2.1",
+    "ts-loader": "^8.3.0",
     "typescript": "^4.4.2"
   },
   "dependencies": {
