--- a/.prettierignore
+++ b/.prettierignore
@@ -16,5 +16,6 @@ coverage
 
 # extension install md files
 #   - excluded as prettier escapes variables e.g. `${PROJECT_ID}` becomes `\${PROJECT_ID}`
+CHANGELOG.md
 POSTINSTALL.md
 PREINSTALL.md
