--- a/firestore-stripe-payments/functions/tsconfig.json
+++ b/firestore-stripe-payments/functions/tsconfig.json
@@ -7,10 +7,9 @@
     "outDir": "lib",
     "sourceMap": true,
     "target": "es2017",
-    "esModuleInterop": true,
-    "moduleResolution": "Node"
+    "esModuleInterop": true
   },
   "compileOnSave": true,
-  "include": ["src", "__tests__"],
-  "exclude": ["__tests__"]
+  "include": ["src"],
+  "exclude": ["node_modules", "__tests__"]
 }
