--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
   "devDependencies": {
     "lerna": "^3.4.3",
     "prettier": "^2.4.1"
+  },
+  "dependencies": {
+    "rimraf": "^3.0.2"
   }
 }
