--- a/firestore-stripe-payments/functions/package.json
+++ b/firestore-stripe-payments/functions/package.json
@@ -1,5 +1,8 @@
 {
   "name": "firestore-stripe-payments",
+  "engines": {
+    "node": "14"
+  },
   "main": "lib/index.js",
   "scripts": {
     "prepare": "npm run build",
@@ -18,25 +21,26 @@
   "author": "Stripe (https://stripe.com/)",
   "license": "Apache-2.0",
   "dependencies": {
-    "firebase-admin": "^9.9.0",
-    "firebase-functions": "^3.19.0",
-    "stripe": "8.191.0"
+    "firebase-admin": "^10.2.0",
+    "firebase-functions": "^3.20.1",
+    "rimraf": "^3.0.2",
+    "stripe": "8.191.0",
+    "typescript": "^3.9.9",
+    "@types/jest": "^24.9.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0",
     "@types/chai": "^4.1.6",
-    "@types/express": "^4.17.11",
-    "@types/jest": "^24.9.1",
+    "@types/express": "^4.17.13",
     "concurrently": "^7.0.0",
     "dotenv": "^16.0.0",
     "envfile": "^6.17.0",
     "firebase-functions-test": "^0.3.3",
-    "jest": "^24.9.0",
     "mocked-env": "^1.3.5",
     "ngrok": "^4.3.1",
     "ts-jest": "^24.1.0",
     "ts-node": "^10.7.0",
-    "typescript": "^3.9.9"
+    "jest": "^24.9.0"
   },
   "prettier": {
     "singleQuote": true,
