--- a/firestore-stripe-payments/extension.yaml
+++ b/firestore-stripe-payments/extension.yaml
@@ -212,8 +212,8 @@ params:
   - param: DELETE_STRIPE_CUSTOMERS
     label: Automatically delete Stripe customer objects
     description: >-
-      Do you want to automatically delete customer objects in Stripe? 
-      When a user is deleted in Firebase Authentication or in Cloud Firestore and set to 'Auto delete' 
+      Do you want to automatically delete customer objects in Stripe?
+      When a user is deleted in Firebase Authentication or in Cloud Firestore and set to 'Auto delete'
       the extension will delete their customer object in Stripe which will immediately cancel all subscriptions for the user.
     type: select
     options:
@@ -228,7 +228,7 @@ params:
     label: Stripe API key with restricted access
     type: secret
     description: >-
-      What is your Stripe API key? 
+      What is your Stripe API key?
       We recommend creating a new [restricted key](https://stripe.com/docs/keys#limit-access)
       with write access only for the "Customers", "Checkout Sessions" and "Customer portal" resources.
       And read-only access for the "Subscriptions" and "Plans" resources.
@@ -239,13 +239,24 @@ params:
     label: Stripe webhook secret
     type: secret
     description: >-
-      This is your signing secret for a Stripe-registered webhook. 
+      This is your signing secret for a Stripe-registered webhook.
       This webhook can only be registered after installation.
-      Leave this value untouched during installation, then follow the 
+      Leave this value untouched during installation, then follow the
       postinstall instructions for registering your webhook
       and configuring this value.
     example: whsec_1234567890
     required: false
+
+  - param: CREATE_CHECKOUT_SESSION_MIN_INSTANCES
+    label: Minimum instances for createCheckoutSession function
+    type: secret
+    description: >-
+      How many instances should be always ready to process checkout requests?
+      This number can be adjusted to reduce cold starts and increase the responsiveness
+      of checkout creation requests.  Suggested values are 0 or 1.
+    default: 0
+    required: true
+
 events:
   - type: com.stripe.v1.product.created
     description: Occurs whenever a product is created.
