chore(firestore-stripe-payments): updated scripts for CI and local testing (#415)
* chore(firestore-stripe-payments): updated scripts for ci and local testing

* chore(firestore-stripe-payments): added testing typescript configuration, fixes jest warnings in files

* fix(firestore-stripe-web-sdk): locked sinon types to 10.0.6

* chore(firestore-stripe-payments): removed obsolete comments

--- a/firestore-stripe-payments/functions/package.json
+++ b/firestore-stripe-payments/functions/package.json
@@ -12,12 +12,11 @@
     "compile": "tsc",
     "generate-readme": "firebase ext:info .. --markdown > ../README.md",
     "test": "ts-node ./__tests__/run-script.ts",
-    "test:local": "ts-node ./__tests__/run-script-watch.ts",
-    "test:watch": "concurrently \"npm run setup:emulator\" \"jest --watch\"",
+    "test:watch": "ts-node ./__tests__/run-script-watch.ts",
     "start:emulator": "cd ../_emulator && firebase emulators:start -P demo-project",
     "exec:emulator": "cd ../_emulator && firebase emulators:exec \"../runTests.sh\" -P demo-project",
-    "setup:webhooks": "ts-node ./__tests__/helpers/setupProxy.ts",
-    "test-coverage": "jest --coverage --detectOpenHandles --forceExit"
+    "exec:emulator:watch": "cd ../_emulator && firebase emulators:exec \"../runTestsWatch.sh\" -P demo-project",
+    "setup:webhooks": "ts-node ./__tests__/helpers/setupProxy.ts"
   },
   "author": "Stripe (https://stripe.com/)",
   "license": "Apache-2.0",
