--- a/firestore-stripe-web-sdk/package.json
+++ b/firestore-stripe-web-sdk/package.json
@@ -37,7 +37,7 @@
     "@types/chai-as-promised": "^7.1.4",
     "@types/chai-like": "^1.1.1",
     "@types/mocha": "^9.0.0",
-    "@types/sinon": "^10.0.6",
+    "@types/sinon": "10.0.6",
     "@types/sinon-chai": "^3.2.5",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
