--- a/firestore-stripe-payments/functions/package.json
+++ b/firestore-stripe-payments/functions/package.json
@@ -21,12 +21,12 @@
   "author": "Stripe (https://stripe.com/)",
   "license": "Apache-2.0",
   "dependencies": {
+    "@types/jest": "^24.9.1",
     "firebase-admin": "^10.2.0",
     "firebase-functions": "^3.21.2",
     "rimraf": "^3.0.2",
     "stripe": "8.191.0",
-    "typescript": "^3.9.9",
-    "@types/jest": "^24.9.1"
+    "typescript": "^3.9.9"
   },
   "devDependencies": {
     "@faker-js/faker": "^6.0.0",
@@ -40,6 +40,7 @@
     "localtunnel": "^2.0.2",
     "mocked-env": "^1.3.5",
     "ngrok": "^4.3.1",
+    "puppeteer": "^14.1.1",
     "ts-jest": "^24.1.0",
     "ts-node": "^10.7.0"
   },
