--- a/firestore-stripe-payments/_emulator/firebase.json
+++ b/firestore-stripe-payments/_emulator/firebase.json
@@ -9,6 +9,9 @@
     "hub": {
       "port": 4000
     },
+    "firestore": {
+      "port": 8080
+    },
     "storage": {
       "port": 9199
     },
@@ -25,5 +28,17 @@
   "firestore": {
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
-  }
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
+    }
+  ]
 }
