--- a/firestore-stripe-payments/extension.yaml
+++ b/firestore-stripe-payments/extension.yaml
@@ -19,6 +19,8 @@ specVersion: v1beta
 displayName: Run Payments with Stripe
 description: Controls access to paid content by syncing your one-time and recurring payments with Firebase Authentication.
 
+icon: icon.png
+
 license: Apache-2.0
 
 sourceUrl: https://github.com/stripe/stripe-firebase-extensions/tree/master/firestore-stripe-payments
