--- a/firestore-stripe-payments/_emulator/firebase.json
+++ b/firestore-stripe-payments/_emulator/firebase.json
@@ -1,6 +1,6 @@
 {
   "extensions": {
-    "firestore-stripe-payments": "../"
+    "firestore-stripe-payments": ".."
   },
   "storage": {
     "rules": "storage.rules"
