chore(firestore-stripe-invoices): reconfigured typescript and upgrade to node16

--- a/firestore-stripe-invoices/functions/package.json
+++ b/firestore-stripe-invoices/functions/package.json
@@ -1,5 +1,8 @@
 {
   "name": "firestore-stripe-invoices",
+   "engines": {
+    "node": "16"
+  },
   "main": "lib/index.js",
   "scripts": {
     "prepare": "npm run build",
