--- a/firestore-stripe-payments/extension.yaml
+++ b/firestore-stripe-payments/extension.yaml
@@ -13,7 +13,7 @@
 # limitations under the License.
 
 name: firestore-stripe-payments
-version: 0.3.8
+version: 0.3.9
 specVersion: v1beta
 
 displayName: Run Payments with Stripe
@@ -22,6 +22,7 @@ description:
   payments with Firebase Authentication.
 
 icon: icon.png
+tags: [payments]
 
 license: Apache-2.0
 
